Fixed bug: bouncing arrow background covered nav

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -85,9 +85,9 @@
   justify-content: center;
   background-color: $projectsBackgroundColor;
   position: absolute;
-  left: 0;
+  left: 46.5%;
   top: 275%;
-  width: 100%;
+  width: auto;
   height: 13%;
   cursor: pointer;
   transition: $transition;
